# units

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  codecov.yml  docker-compose.yaml  xmake.lua
.github/workflows/: ci.yml
cmake/: CodeCoverage.cmake  unitsConfig.cmake.in
include/example/: example.hpp
include/units/: format.hpp  math.hpp  units.hpp
include/units/core/: quantity.hpp  quantity_point.hpp  quantity_spec.hpp  ratio.hpp  reference.hpp  unit.hpp
include/units/systems/: cgs.hpp  imperial.hpp  natural.hpp
include/units/systems/isq/: base.hpp  electromagnetism.hpp  mechanics.hpp  thermodynamics.hpp
include/units/systems/si/: base.hpp  constants.hpp  derived.hpp  literals.hpp  prefixes.hpp  temperature.hpp
src/: main.cpp
tests/: CMakeLists.txt  test_example.cpp  xmake.lua
tests/benchmark/: compile_time_benchmark.cpp
tests/compile_fail/: add_incompatible_dimensions.cpp  implicit_narrowing.cpp  point_plus_point.cpp  torque_to_energy.cpp
tests/examples/: basic_quantities.cpp  cgs_units.cpp  derived_quantities.cpp  formatting.cpp  imperial_units.cpp  math_functions.cpp  math_functions_extended.cpp  natural_units.cpp  quick_start.cpp  temperature_conversions.cpp  unit_conversions.cpp  zero_overhead.cpp
tests/runtime/: additional_coverage_test.cpp  affine_quantity_test.cpp  conversion_precision_test.cpp  coverage_test.cpp  format_test.cpp  math_test.cpp
tests/static/: format_test.cpp  math_test.cpp  quantity_point_test.cpp  quantity_spec_test.cpp  quantity_test.cpp  ratio_test.cpp  systems_test.cpp  unit_test.cpp
